# haanrad

./: CMakeLists.txt  README.md
docs/: DesignDocument.odt  HaanradTechnicalAnalysis.odt  TestDocumentation.ods  diagrams.zargo  diagrams.zargo~
docs/tests/C6/: wireshark.pcapng
docs/tests/C7/: wireshark.pcapng
docs/tests/C8/: wireshark.pcapng
docs/tests/H5/: wireshark.pcapng
docs/tests/H7/: .cache
docs/tests/HC1/: wireshark.pcapng
docs/tests/HC2/: wireshark.pcapng
docs/tests/HC3/: wireshark.pcapng
docs/tests/HC4/: wireshark.pcapng
src/client/: CommHandler.cpp  CommHandler.h  LocalFileManager.cpp  LocalFileManager.h  Message.cpp  Message.h  MessageQueue.cpp  MessageQueue.h  main.cpp
src/haanrad/: CovertSocket.cpp  CovertSocket.h  NetworkMonitor.cpp  NetworkMonitor.h  NetworkMonitorThread.cpp  NetworkMonitorThread.h  PacketMeta.h  ProcessDistorter.cpp  ProcessDistorter.h  SystemState.cpp  SystemState.h  Time.cpp  Time.h  TrafficAnalyzer.cpp  TrafficAnalyzer.h  main.cpp
src/haanrad/covertsocket/: CovertSocket.cpp  CovertSocket.h  CovertSocketQueue.cpp  CovertSocketQueue.h  CovertSocketThread.cpp  CovertSocketThread.h
src/haanrad/executor/: Executor.cpp  Executor.h  ExecutorQueue.cpp  ExecutorQueue.h
src/haanrad/filesystemmanager/: FileSystemManager.cpp  FileSystemManager.h  FileSystemManagerQueue.cpp  FileSystemManagerQueue.h  FileSystemManagerThread.cpp  FileSystemManagerThread.h
src/haanrad/networkmonitor/: NetworkMonitor.cpp  NetworkMonitor.h  NetworkMonitorThread.cpp  NetworkMonitorThread.h
src/shared/: Authenticator.cpp  Authenticator.h  Crypto.cpp  Crypto.h  HCrypto.cpp  HCrypto.h  Logger.cpp  Logger.h  PacketFactory.cpp  PacketFactory.h  PacketIdentifier.cpp  PacketIdentifier.h  PacketMeta.cpp  PacketMeta.h  ProcDev.h  ProcHelper.cpp  ProcHelper.h  ProcStat.h  Structures.h
src/shared/proc/: ProcDev.cpp  ProcHelper.cpp  ProcStat.cpp
src/shared/utils/: Logger.cpp  Structures.h
tests/: CMakeLists.txt
tests/test-crypto/: main.cpp
tests/test-networkmonitor/: main.cpp
tests/test-processdistorter/: main.cpp
tests/test-systemstate/: main.cpp
